# pdmJavaLib

./: .gitmodules  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/mycpp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/mycpp/: FirstFragment.java  MainActivity.java  SecondFragment.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/mycpp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
pdmCryptModule/: build.gradle
pdmCryptModule/src/androidTest/java/com/example/pdmcryptmodule/: ExampleInstrumentedTest.java
pdmCryptModule/src/main/: AndroidManifest.xml
pdmCryptModule/src/main/cpp/: CMakeLists.txt  main.cpp
pdmCryptModule/src/main/cpp/java/com/pdmnotes/: com_pdmnotes_PdmCrypt.c  com_pdmnotes_PdmCrypt.cpp  com_pdmnotes_PdmCrypt.h
pdmCryptModule/src/test/java/com/example/pdmcryptmodule/: ExampleUnitTest.java
